mobile view modified

--- a/index.css
+++ b/index.css
@@ -19,7 +19,9 @@
     display: grid;
     /* gap: 1.5rem; */
     justify-content: center;
+    align-content: center;
     margin-left: 52px;
+    margin-right: 52px;
 }
 
 .header-style {
@@ -95,5 +97,9 @@
   .generate-btn-style:hover {
     box-shadow: rgba(187, 187, 245, 0.158) 0px 30px 60px -12px inset,
       rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  }
+
+  #test-field {
+    text-align: center;
   }
 
